sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '=' expected but ';' found.
var j==0
^AlgBubbleSort1:5: error: '=' expected but ';' found.
while= (j=getNombreValeurs() :Int) {
^AlgBubbleSort1:5: error: '(' expected but '=' found.
while= (j=getNombreValeurs() :Int) {
     ^AlgBubbleSort1:20: error: illegal start of simple expression
} 
^